--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
                 this.apiKey = "worm_NtK9F9cl-oTWhoYY0-nH0r39Cg-2f4nytWs";
                 
                 // مفاتيح الترخيص الصالحة (تمت إزالة المفاتيح التجريبية)
-                this.validProKeys = []; // إزالة جميع المفاتيح التجريبية
+                this.validProKeys = [WG4T8H7K9D2F5R]; // إزالة جميع المفاتيح التجريبية
                 
                 this.sessionId = localStorage.getItem('wgpt_sess') || 'sess_' + Date.now();
                 localStorage.setItem('wgpt_sess', this.sessionId);
