--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
     // ===== الثوابت والإعدادات =====
     const CONFIG = {
       API_URL: "https://aolckxwjfendnyrkrapc.supabase.co/functions/v1/wormgpt",
-      VALID_LICENSE_KEY: "wgpt_ac7489d0bf",
+      VALID_LICENSE_KEY: "1234",
       DEFAULT_API_KEY: "worm_NtK9F9cl-oTWhoYY0-nH0r39Cg-2f4nytWs",
       MAX_FILE_SIZE: 1024 * 1024, // 1MB
       ALLOWED_FILE_EXTENSIONS: ['.txt', '.py', '.js', '.css', '.html', '.json', '.md']
